[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Objects/MeleEnemy/MeleEnemy.gd" type="Script" id=1]
[ext_resource path="res://src/Objects/MeleEnemy/anim_frames.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 24, 24 )

[node name="MeleEnemy" type="Area2D" index="0" groups=[
"Enemy",
]]

pause_mode = 1
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pause", "Z Index" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 2
_sections_unfolded = [ "Animation", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

z_index = -1
shape = SubResource( 1 )
_sections_unfolded = [ "Z Index" ]

[node name="DamageTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="PauseTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="AnimTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.25
one_shot = false
autostart = true

[connection signal="body_entered" from="." to="." method="_on_MeleEnemy_body_entered"]

[connection signal="body_exited" from="." to="." method="_on_MeleEnemy_body_exited"]

[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]

[connection signal="timeout" from="PauseTimer" to="." method="_on_PauseTimer_timeout"]

[connection signal="timeout" from="AnimTimer" to="." method="_on_AnimTimer_timeout"]


